k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bbapp
  labels:
    app: bbapp-backend
spec:
  selector:
    app: bbapp-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
