k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbapp-frontend
  namespace: bbapp
  labels:
    app: bbapp-frontend
spec:
  selector:
    app: bbapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
